# hardware_acceleration_fpga_devcon

./: .gitignore  README.md
DVCON_rtl/: DVCON_rtl.xpr  run_sim.tcl
stage_2A/: README.txt  demo.py  pipeline.py
stage_2A/models/: task_scorer_best.pt
task_detection_tpu/_ide/: .peers.ini  settings.json  version.ini  workspace_journal.py  workspace_journal_24521.py  workspace_journal_4464.py  workspace_journal_4513.py  workspace_journal_4704.py  workspace_journal_4712.py  workspace_journal_4719.py  workspace_journal_4777.py  workspace_journal_4867.py  workspace_journal_4870.py  workspace_journal_4926.py  workspace_journal_4976.py  workspace_journal_5028.py  workspace_journal_5083.py  workspace_journal_5566.py  workspace_journal_5662.py  workspace_journal_8405.py
task_detection_tpu/task_detection_tpu/: compile_commands.json  hls_config.cfg  mlp_engine.cpp  mlp_engine.h  pe.cpp  pe.h  pe_tb.cpp  systolic_16x16.cpp  systolic_16x16.h  systolic_16x16_tb.cpp  systolic_2x2.cpp  systolic_2x2.h  systolic_2x2_tb.cpp  systolic_4x4.cpp  systolic_4x4.h  systolic_4x4_tb.cpp  systolic_8x8.cpp  systolic_8x8.h  systolic_8x8_tb.cpp  task_detection_accel.cpp  task_detection_accel_tb.cpp  tpu_accel.cpp  tpu_accel.h  tpu_accel_tb.cpp  tpu_core.cpp  tpu_core.h  tpu_tb.cpp  tpu_tile_tb.cpp  types.h  vitis-comp.json
task_detection_tpu/tpu_integrated_accel/: compile_commands.json  hls_config.cfg  vitis-comp.json
task_detection_tpu/tpu_pe_experiment/: compile_commands.json  hls_config.cfg  vitis-comp.json
task_detection_tpu/tpu_tile_8x8/: compile_commands.json  hls_config.cfg  vitis-comp.json
task_detection_tpu/tpu_tile_experiment/: compile_commands.json  hls_config.cfg  vitis-comp.json
task_detection_tpu/yolo_backbone_1/: compile_commands.json  hls_config.cfg  vitis-comp.json  yolo_block.cpp  yolo_block.h  yolo_block_tb.cpp
task_detection_tpu/yolo_backbone_1/yolo_backbone_1/hls/impl/misc/drivers/yolo_backbone_block_v1_0/src/: CMakeLists.txt  Makefile  xyolo_backbone_block.h  xyolo_backbone_block_hw.h  xyolo_backbone_block_linux.c  xyolo_backbone_block_sinit.c
task_detection_tpu/yolo_backbone_2/: compile_commands.json  hls_config.cfg  vitis-comp.json  yolo_backbone_2.cpp  yolo_backbone_2.h  yolo_backbone_2_tb.cpp
task_detection_tpu/yolo_backbone_3/: compile_commands.json  hls_config.cfg  real_block_weights.h  real_weights.h  vitis-comp.json  yolo_backbone_3.cpp  yolo_backbone_3.h  yolo_backbone_3_tb.cpp
task_detection_tpu/yolo_backbone_v4/: compile_commands.json  hls_config.cfg  real_v4_weights.h  vitis-comp.json  yolo_backbone_4.cpp  yolo_backbone_4.h  yolo_backbone_4_tb.cpp
task_detection_tpu/yolo_backbone_v4/yolo_backbone_v4/hls/.autopilot/db/driver/src/: CMakeLists.txt  xyolo_backbone_v4_hw.h  xyolo_backbone_v4_sinit.c
(+5340 files in other folders)
